# dangine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json
assets/image/: tetris_parts.aseprite
assets/map/: testmap2.dum  testmap2.tmx
assets/script/: lifecycle_test.chai  player.chai  test.chai
assets/script/tetris/: Board.chai  Main.chai  Piece.chai
assets/shader/: line.fs  line.vs  screen.fs  screen.vs  sprite_default.fs  sprite_default.vs  test.vs  textured.vs
include/Engine/: Config.hpp
include/Engine/Input/: Input.hpp  Keys.hpp
include/Engine/Physics/: Collision.hpp  CollisionBody.hpp  CollisionShape.hpp  CollisionWorld.hpp
include/Engine/Physics/Shapes/: CircleShape.hpp  RectShape.hpp
include/Engine/Renderer/: Quad.hpp  Renderer.hpp  Shader.hpp  Texture.hpp
include/Engine/Scene/: Animator.hpp  Collider.hpp  Node.hpp  Script.hpp  Sprite.hpp  TileMap.hpp  Transform.hpp
include/Engine/Scripting/: Register.hpp  ScriptManager.hpp
include/Engine/Util/: Logger.hpp  Math.hpp
include/Game/: Player.hpp
include/Tetris_C/: Board.hpp  Piece.hpp
libs/chaiscript/: chaiscript.hpp
libs/glad/src/: glad.c
src/Engine/Input/: Input.cpp
src/Engine/Physics/: CollisionBody.cpp  CollisionWorld.cpp
src/Engine/Renderer/: Renderer.cpp  RendererLines.cpp  Shader.cpp  Texture.cpp
src/Engine/Scene/: Animator.cpp  Collider.cpp  Node.cpp  Script.cpp  Sprite.cpp  TileMap.cpp
src/Engine/Scripting/: ScriptManager.cpp
src/Game/: Player.cpp  main.cpp
src/Tetris_C/: Piece.cpp  main.cpp
src/Tetris_S/: main.cpp
tools/: dumdum_export.js
(+9 files in other folders)
